--- a/man/lprint-default.1
+++ b/man/lprint-default.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-default man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019-2020 by Michael R Sweet.
+.\" Copyright © 2019-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-default 1 "LPrint" "January 24, 2020" "Michael R Sweet"
+.TH lprint-default 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-default \- set or get the default printer queue.
 .SH SYNOPSIS
@@ -38,4 +38,4 @@ Specifies an "ipp:" or "ipps:" URI for a remote printer.
 .BR lprint-modify (1),
 .BR lprint-printers (1).
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
