--- a/man/lprint-printers.1
+++ b/man/lprint-printers.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-printers man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019-2020 by Michael R Sweet.
+.\" Copyright © 2019-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-printers 1 "LPrint" "January 4, 2020" "Michael R Sweet"
+.TH lprint-printers 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-printers \- list the configured printer queues.
 .SH SYNOPSIS
@@ -18,4 +18,4 @@ This command lists the configured label printer queues.
 .BR lprint (1),
 .BR lprint-add (1).
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
