--- a/man/lprint.1
+++ b/man/lprint.1
@@ -1,12 +1,12 @@
 .\"
 .\" Main man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019-2020 by Michael R Sweet.
+.\" Copyright © 2019-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint 1 "LPrint" "January 5, 2020" "Michael R Sweet"
+.TH lprint 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint \- a label printer application
 .SH SYNOPSIS
@@ -66,6 +66,8 @@ Show the status of a printer or all printers.
 submit
 Submit a file for printing.
 .SH SEE ALSO
+https://www.msweet.org/lprint
+.br
 .BR lprint-add (1),
 .BR lprint-cancel (1),
 .BR lprint-default (1),
@@ -82,4 +84,4 @@ Submit a file for printing.
 .BR lprint-submit (1),
 .BR lprint.conf (5)
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
