--- a/man/lprint-add.1
+++ b/man/lprint-add.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-add man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019-2020 by Michael R Sweet.
+.\" Copyright © 2019-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-add 1 "LPrint" "January 24, 2020" "Michael R Sweet"
+.TH lprint-add 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-add \- add a printer queue.
 .SH SYNOPSIS
@@ -89,4 +89,4 @@ command.
 .BR lprint-options (1),
 .BR lprint-submit (1)
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
