--- a/man/lprint-delete.1
+++ b/man/lprint-delete.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-delete man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019-2020 by Michael R Sweet.
+.\" Copyright © 2019-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-delete 1 "LPrint" "January 24, 2020" "Michael R Sweet"
+.TH lprint-delete 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-delete \- delete a label printer queue.
 .SH SYNOPSIS
@@ -35,4 +35,4 @@ Specifies an "ipp:" or "ipps:" URI for a remote printer.
 .BR lprint-add (1),
 .BR lprint-modify (1).
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
