--- a/man/lprint-jobs.1
+++ b/man/lprint-jobs.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-jobs man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019-2020 by Michael R Sweet.
+.\" Copyright © 2019-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-jobs 1 "LPrint" "January 4, 2020" "Michael R Sweet"
+.TH lprint-jobs 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-jobs \- list pending print jobs.
 .SH SYNOPSIS
@@ -36,4 +36,4 @@ Specifies an "ipp:" or "ipps:" URI for a remote printer.
 .BR lprint-cancel (1),
 .BR lprint-default (1).
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
