--- a/man/lprint-options.1
+++ b/man/lprint-options.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-options man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2020 by Michael R Sweet.
+.\" Copyright © 2020-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-default 1 "LPrint" "January 5, 2020" "Michael R Sweet"
+.TH lprint-default 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-options \- get the supported options for a printer queue.
 .SH SYNOPSIS
@@ -37,4 +37,4 @@ Specifies an "ipp:" or "ipps:" URI for a remote printer.
 .BR lprint-printers (1),
 .BR lprint-submit (1).
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
