--- a/man/lprint-server.1
+++ b/man/lprint-server.1
@@ -6,7 +6,7 @@
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-server 1 "LPrint" "November 4, 2021" "Michael R Sweet"
+.TH lprint-server 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-server \- start a label print server.
 .SH SYNOPSIS
