--- a/man/lprint-shutdown.1
+++ b/man/lprint-shutdown.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-shutdown man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019-2020 by Michael R Sweet.
+.\" Copyright © 2019-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-shutdown 1 "LPrint" "January 4, 2020" "Michael R Sweet"
+.TH lprint-shutdown 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-shutdown \- stop a running label print server.
 .SH SYNOPSIS
@@ -18,4 +18,4 @@ This command stops a running label print server.
 .BR lprint (1),
 .BR lprint-server (1).
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
