--- a/man/lprint-status.1
+++ b/man/lprint-status.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-status man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019-2020 by Michael R Sweet.
+.\" Copyright © 2019-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-status 1 "LPrint" "January 4, 2020" "Michael R Sweet"
+.TH lprint-status 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-status \- show the current status of a printer
 .SH SYNOPSIS
@@ -35,4 +35,4 @@ Specifies an "ipp:" or "ipps:" URI for a remote printer.
 .BR lprint (1),
 .BR lprint-default (1).
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
