--- a/man/lprint-submit.1
+++ b/man/lprint-submit.1
@@ -1,12 +1,12 @@
 .\"
 .\" lprint-submit man page for LPrint, a Label Printer Utility
 .\"
-.\" Copyright © 2019-2020 by Michael R Sweet.
+.\" Copyright © 2019-2021 by Michael R Sweet.
 .\"
 .\" Licensed under Apache License v2.0.  See the file "LICENSE" for more
 .\" information.
 .\"
-.TH lprint-submit 1 "LPrint" "January 11, 2020" "Michael R Sweet"
+.TH lprint-submit 1 "LPrint" "2021-12-21" "Michael R Sweet"
 .SH NAME
 lprint-submit \- submit a file for printing.
 .SH SYNOPSIS
@@ -151,4 +151,4 @@ Specifies an "ipp:" or "ipps:" URI for a remote printer.
 .BR lprint-default (1),
 .BR lprint-options (1).
 .SH COPYRIGHT
-Copyright \[co] 2019-2020 by Michael R Sweet.
+Copyright \[co] 2019-2021 by Michael R Sweet.
