--- a/static-resources/lprint-it.strings
+++ b/static-resources/lprint-it.strings
@@ -1,144 +1,144 @@
-"media.na_index-3x5_3x5in" = "3 x 5ʺ Label";
-"media.na_index-4x6_4x6in" = "4 x 6ʺ Label";
-"media.oe_1.25x0.25-label_1.25x0.25in" = "1-1/4 x 1/4ʺ Label";
-"media.oe_1.25x2.25-label_1.25x2.25in" = "1-1/4 x 2-1/4ʺ Label";
-"media.oe_1.5x0.25-label_1.5x0.25in" = "1-1/2 x 1/4ʺ Label";
-"media.oe_1.5x0.5-label_1.5x0.5in" = "1-1/2 x 1/2ʺ Label";
-"media.oe_1.5x1-label_1.5x1in" = "1-1/2 x 1ʺ Label";
-"media.oe_1.5x2-label_1.5x2in" = "1-1/2 x 2ʺ Label";
-"media.oe_2-part-internet-postage-label_2.25x7.5in" = "2-1/4 x 7-1/2ʺ 2-Part Internet Postage Label";
-"media.oe_2-up-address-label_2.25x3.5in" = "2-1/4 x 3-1/2ʺ 2-Up Address Label";
-"media.oe_2-up-file-folder-label_1.125x3.4375in" = "1-1/8 x 4-7/16ʺ 2-up File Folder Label";
-"media.oe_2.25x0.5-label_2.25x0.5in" = "2-1/4 x 1/2ʺ Label";
-"media.oe_2.25x0.5-label_2.25xin" = "2-1/4 x 1/2ʺ Label";
-"media.oe_2.25x1.25-label_2.25x1.25in" = "2-1/4 x 1-1/4ʺ Label";
-"media.oe_2.25x1.25-label_2.25xin" = "2-1/4 x 1-1/4ʺ Label";
-"media.oe_2.25x4-label_2.25x4in" = "2-1/4 x 4ʺ Label";
-"media.oe_2.25x5.5-label_2.25x5.5in" = "2-1/4 x 5-1/2ʺ Label";
-"media.oe_2.38x5.5-label_2.38x5.5in" = "2-3/8 x 5-1/2ʺ Label";
-"media.oe_2.5x1-label_2.5x1in" = "2-1/2 x 1ʺ Label";
-"media.oe_2.5x2-label_2.5x2in" = "2-1/2 x 2ʺ Label";
-"media.oe_2.75x1.25-label_2.75x1.25in" = "2-3/4 x 1-1/4ʺ Label";
-"media.oe_2.9x1-label_2.9x1in" = "2.9 x 1ʺ Label";
-"media.oe_2x0.37-label_2x0.37in" = "2 x 0.37ʺ Label";
-"media.oe_2x0.5-label_2x0.5in" = "2 x 1/2ʺ Label";
-"media.oe_2x1-label_2x1in" = "2 x 1ʺ Label";
-"media.oe_2x1.25-label_2x1.25in" = "2 x 1-1/4ʺ Label";
-"media.oe_2x2-label_2x2in" = "2 x 2ʺ Label";
-"media.oe_2x3-label_2x3in" = "2 x 3ʺ Label";
-"media.oe_2x4-label_2x4in" = "2 x 4ʺ Label";
-"media.oe_2x5.5-label_2x5.5in" = "2 x 5-1/2ʺ Label";
-"media.oe_3-part-postage-label_2.25x7in" = "2-1/4 x 7ʺ 3-Part Postage Label";
-"media.oe_3.25x2-label_3.25x2in" = "3-1/4 x 2ʺ Label";
-"media.oe_3.25x5-label_3.25x5in" = "3-1/4 x 5ʺ Label";
-"media.oe_3.25x5.5-label_3.25x5.5in" = "3-1/4 x 5-1/2ʺ Label";
-"media.oe_3.25x5.83-label_3.25x5.83in" = "3-1/4 x 5-13/16ʺ Label";
-"media.oe_3.25x7.83-label_3.25x7.83in" = "3-1/4 x 7-13/16ʺ Label";
-"media.oe_3.5x1-label_3.5x1in" = "3-1/2 x 1ʺ Label";
-"media.oe_30859-paint-can-label_2.25x3.125in" = "2-1/4 x 3-1/8ʺ Paint Can Label";
-"media.oe_3x1-label_3x1in" = "3 x 1ʺ Label";
-"media.oe_3x1.25-label_3x1.25in" = "3 x 1-1/4ʺ Label";
-"media.oe_3x2-label_3x2in" = "3 x 2ʺ Label";
-"media.oe_3x3-label_3x3in" = "3 x 3ʺ Label";
-"media.oe_3x5-label_3x5in" = "3 x 5ʺ Label";
-"media.oe_4x1-label_4x1in" = "4 x 1ʺ Label";
-"media.oe_4x13-label_4x13in" = "4 x 13ʺ Label";
-"media.oe_4x2-label_4x2in" = "4 x 2ʺ Label";
-"media.oe_4x3-label_4x3in" = "4 x 3ʺ Label";
-"media.oe_4x4-label_4x4in" = "4 x 4ʺ Label";
-"media.oe_4x5-label_4x5in" = "4 x 5ʺ Label";
-"media.oe_4x6-label_4x6in" = "4 x 6ʺ Label";
-"media.oe_4x6.5-label_4x6.5in" = "4 x 6-1/2ʺ Label";
-"media.oe_4x8-label_4x8in" = "4 x 8ʺ Label";
-"media.oe_6x1-label_6x1in" = "6 x 1ʺ Label";
-"media.oe_6x13-label_6x13in" = "6 x 13ʺ Label";
-"media.oe_6x2-label_6x2in" = "6 x 2ʺ Label";
-"media.oe_6x3-label_6x3in" = "6 x 3ʺ Label";
-"media.oe_6x4-label_6x4in" = "6 x 4ʺ Label";
-"media.oe_6x5-label_6x5in" = "6 x 5ʺ Label";
-"media.oe_6x6-label_6x6in" = "6 x 6ʺ Label";
-"media.oe_6x6.5-label_6x6.5in" = "6 x 6-1/2ʺ Label";
-"media.oe_8x1-label_8x1in" = "8 x 1ʺ Label";
-"media.oe_8x13-label_8x13in" = "8 x 13ʺ Label";
-"media.oe_8x2-label_8x2in" = "8 x 2ʺ Label";
-"media.oe_8x3-label_8x3in" = "8 x 3ʺ Label";
-"media.oe_8x4-label_8x4in" = "8 x 4ʺ Label";
-"media.oe_8x5-label_8x5in" = "8 x 5ʺ Label";
-"media.oe_8x6-label_8x6in" = "8 x 6ʺ Label";
-"media.oe_8x6.5-label_8x6.5in" = "8 x 6-1/2ʺ Label";
-"media.oe_address-label_1.125x3.5in" = "1-1/8 x 3-1/2ʺ Address Label";
-"media.oe_barcode-label_0.75x2.5in" = "3/4 x 2-1/2ʺ Barcode Label";
-"media.oe_book-spine-label_1x1.5in" = "1 x 1-1/2ʺ Book Spine Label";
-"media.oe_continuous-label_2.125x3600in" = "2-1/8ʺ Continuous Label";
-"media.oe_dk1201-address_1.1x3.5in" = "DK1201 28 x 89mm Address Label";
-"media.oe_dk1202-shipping_2.4x3.9in" = "DK1202 61 x 99mm Shipping Label";
-"media.oe_dk1203-file-folder_0.66x3.4in" = "DK1203 17 x 86mm File Folder Label";
-"media.oe_dk1204-multi-purpose_0.66x2.1in" = "DK1204 17 x 53mm Multipurpose Label";
-"media.oe_dk1207-cd-dvd_2.2x2.2in" = "DK1207 56mm CD/DVD Label";
-"media.oe_dk1208-large-address_1.4x3.5in" = "DK1208 36 x 89mm Large Address Label";
-"media.oe_dk1209-small-address_1.1x2.4in" = "DK1209 28 x 61mm Small Address Label";
-"media.oe_dk1219-round_0.47x0.47in" = "DK1219 12mm Round Label";
-"media.oe_dk1240-large-multi-purpose_1.9x4in" = "DK1240 48 x 102mm Large Multipurpose Label";
-"media.oe_file-folder-label_0.5625x3.4375in" = "9/16 x 3-7/16ʺ File Folder Label";
-"media.oe_hanging-file-tab-insert_0.5625x2in" = "9/16 x 2ʺ Hanging File Tab Insert Label";
-"media.oe_internet-postage-confirmation-label_2.3125x10.5in" = "2-5/16 x 10-1/2ʺ Internet Postage Confirmation Label";
-"media.oe_internet-postage-label_1.25x1.625in" = "1-1/4 x 1-5/8ʺ Internet Postage Label";
-"media.oe_internet-postage-label_2.3125x7in" = "2-3/8 x 7ʺ Internet Postage Label";
-"media.oe_lg-address-label_1.4x3.5in" = "1-4/10 x 3-1/2ʺ Large Address Label";
-"media.oe_lg-multipurpose-label_2.125x.75in" = "2-1/8 x 3/4ʺ Large Multipurpose Label";
-"media.oe_library-barcode-label_0.5x1.875in" = "1/2 x 1-7/8ʺ Library Barcode Label";
-"media.oe_md-appointment-card_2x3.5in" = "2 x 3-1/2ʺ Medium Appointment Card";
-"media.oe_md-multipurpose-label_2.25x1.25in" = "2-1/4 x 1/1/4ʺ Medium Multipurpose Label";
-"media.oe_media-label_2.25x2.25in" = "2-1/4 x 2-1/4ʺ Media Label";
-"media.oe_medium-1in-tape_0.5x1in" = "1/2 x 1ʺ Tape";
-"media.oe_medium-2in-tape_0.5x2in" = "1/2 x 2ʺ Tape";
-"media.oe_medium-3in-tape_0.5x3in" = "1/2 x 3ʺ Tape";
-"media.oe_multipurpose-label_2x2.3125in" = "2 x 2-5/16ʺ Multipurpose Label";
-"media.oe_name-badge-label_2.25x4in" = "2-1/4 x 4ʺ Name Badge Label";
-"media.oe_price-tag-label_0.9375x0.875in" = "15/16 x 7/8ʺ Price Tag Label";
-"media.oe_return-address-label_0.75x2in" = "3/4 x 2ʺ Return Address Label";
-"media.oe_shipping-label_2.125x4in" = "2-1/8 x 4ʺ Shipping Label";
-"media.oe_shipping-label_2.3125x4in" = "2-5/16 x 4ʺ Shipping Label";
-"media.oe_sm-multipurpose-label_1x2.125in" = "1 x 2-1/8ʺ Small Multipurpose Label";
-"media.oe_square-multipurpose-label_1x1in" = "1ʺ Square Multipurpose Label";
-"media.oe_thin-1in-tape_0.25x1in" = "1/4 x 1ʺ Tape";
-"media.oe_thin-2in-tape_0.25x2in" = "1/4 x 2ʺ Tape";
-"media.oe_thin-3in-tape_0.25x3in" = "1/4 x 3ʺ Tape";
-"media.oe_thin-multipurpose-label_0.375x2.8125in" = "3/8 x 2-13/16ʺ Thin Multipurpose Label";
-"media.oe_thinner-1in-tape_0.375x1in" = "3/8 x 1ʺ Tape";
-"media.oe_thinner-2in-tape_0.375x2in" = "3/8 x 2ʺ Tape";
-"media.oe_thinner-3in-tape_0.375x3in" = "3/8 x 3ʺ Tape";
-"media.oe_video-spine-label_0.75x5.875in" = "3/4 x 5-7/8ʺ Video Spine Label";
-"media.oe_video-top-label_1.8x3.1in" = "1.8 x 3.1ʺ Video Top Label";
-"media.oe_wide-1in-tape_1x1in" = "1 x 1ʺ Tape";
-"media.oe_wide-2in-tape_1x2in" = "1 x 2ʺ Tape";
-"media.oe_wide-3in-tape_1x3in" = "1 x 3ʺ Tape";
-"media.oe_wider-1in-tape_0.75x1in" = "3/4 x 1ʺ Tape";
-"media.oe_wider-2in-tape_0.75x2in" = "3/4 x 2ʺ Tape";
-"media.oe_wider-3in-tape_0.75x3in" = "3/4 x 3ʺ Tape";
-"media.om_35mm-slide_9x37mm" = "35mm Slide Label";
-"media.om_4-part-label_48x96mm" = "48 x 96mm 4-Part Label";
-"media.om_8mm-spine_9x66mm" = "8mm Spine Label";
-"media.om_address-large_35x83mm" = "35 x 83mm Large Address Label";
-"media.om_address-small_24x83mm" = "24 x 83mm Small Address Label";
-"media.om_cut-hanging-13_32x78mm" = "32 x 78mm 1/3 Cut Hanging File Folder Label";
-"media.om_cut-hanging-15_32x40mm" = "32 x 40mm 1/5 Cut Hanging File Folder Label";
-"media.om_diskette_48x64mm" = "48 x 64mm Diskette Label";
-"media.om_euro-file-folder_39x49mm" = "39 x 49mm Euro File Folder Label";
-"media.om_euro-folder-narrow_38x186mm" = "38 x 186mm Euro Narrow File Folder Label";
-"media.om_euro-folder-wide_48x186mm" = "48 x 186mm Euro Wide File Folder Label";
-"media.om_euro-name-badge-large_48x79mm" = "48 x 79mm Euro Large Name Badge Label";
-"media.om_euro-name-badge_38x67mm" = "38 x 67mm Euro Name Badge Label";
-"media.om_file-folder_13x81mm" = "13 x 81mm File Folder Label";
-"media.om_jewelry_27x48mm" = "27 x 48mm Jewelry Label";
-"media.om_media-badge_48x64mm" = "48 x 64mm Media Badge Label";
-"media.om_multi-purpose_24x44mm" = "24 x 44mm Multipurpose Label";
-"media.om_retail-label_32x37mm" = "32 x 37mm Retail Label";
-"media.om_return_16x43mm" = "16 x 43mm Return Label";
-"media.om_round_22x24mm" = "22mm Round Label";
-"media.om_shipping_48x96mm" = "48 x 96mm Shipping Label";
-"media.om_top-coated-paper_48x140mm" = "48 x 140mm Top Coated Paper";
-"media.om_vhs-face_45x72mm" = "45 x 72mm VHS Face Label";
-"media.om_vhs-spine_18x141mm" = "18 x 141mm VHS Spine Label";
-"media.om_zip-disk_48x55mm" = "48 x 55mm Zip Disk Label";
-"New Custom Size" = "New Custom Size";
+"New Custom Size" = "Nuova dimensione personalizzata";
+"media.na_index-3x5_3x5in" = "3 x 5 etichetta";
+"media.na_index-4x6_4x6in" = "4 x 6 etichetta";
+"media.oe_1.25x0.25-label_1.25x0.25in" = "1-1/4 x 1/4 Etichetta";
+"media.oe_1.25x2.25-label_1.25x2.25in" = "1-1/4 x 2-1/4";
+"media.oe_1.5x0.25-label_1.5x0.25in" = "1-1/2 x 1/4 Etichetta";
+"media.oe_1.5x0.5-label_1.5x0.5in" = "1-1/2 x 1/2 etichetta";
+"media.oe_1.5x1-label_1.5x1in" = "1-1/2 x 1 etichetta";
+"media.oe_1.5x2-label_1.5x2in" = "1-1/2 x 2 etichetta";
+"media.oe_2-part-internet-postage-label_2.25x7.5in" = "2-1/4 x 7-1/2 Etichetta di Postage Internet 2 pezzi";
+"media.oe_2-up-address-label_2.25x3.5in" = "Etichetta di indirizzo 2-1/4 x 3-1/2";
+"media.oe_2-up-file-folder-label_1.125x3.4375in" = "1-1/8 x 4-7/16 2-up Etichetta cartella file";
+"media.oe_2.25x0.5-label_2.25x0.5in" = "2-1/4 x 1/2 etichetta";
+"media.oe_2.25x0.5-label_2.25xin" = "2-1/4 x 1/2 etichetta";
+"media.oe_2.25x1.25-label_2.25x1.25in" = "Etichetta 2-1/4 x 1-1/4";
+"media.oe_2.25x1.25-label_2.25xin" = "Etichetta 2-1/4 x 1-1/4";
+"media.oe_2.25x4-label_2.25x4in" = "2-1/4 x 4 etichetta";
+"media.oe_2.25x5.5-label_2.25x5.5in" = "2-1/4 x 5-1/2 etichetta";
+"media.oe_2.38x5.5-label_2.38x5.5in" = "2-3/8 x 5-1/2 etichetta";
+"media.oe_2.5x1-label_2.5x1in" = "2-1/2 x 1 etichetta";
+"media.oe_2.5x2-label_2.5x2in" = "2-1/2 x 2 etichetta";
+"media.oe_2.75x1.25-label_2.75x1.25in" = "2-3/4 x 1-1/4 etichetta";
+"media.oe_2.9x1-label_2.9x1in" = "2.9 x 1 etichetta";
+"media.oe_2x0.37-label_2x0.37in" = "2 x 0.37 Etichetta";
+"media.oe_2x0.5-label_2x0.5in" = "2 x 1/2 etichetta";
+"media.oe_2x1-label_2x1in" = "2 x 1 etichetta";
+"media.oe_2x1.25-label_2x1.25in" = "2 x 1-1/4 Etichetta";
+"media.oe_2x2-label_2x2in" = "2 x 2 etichetta";
+"media.oe_2x3-label_2x3in" = "2 x 3 etichetta";
+"media.oe_2x4-label_2x4in" = "2 x 4 etichetta";
+"media.oe_2x5.5-label_2x5.5in" = "2 x 5-1 / 2";
+"media.oe_3-part-postage-label_2.25x7in" = "Etichetta di Postage 2-1/4 x 7";
+"media.oe_3.25x2-label_3.25x2in" = "3-1/4 x 2 etichetta";
+"media.oe_3.25x5-label_3.25x5in" = "3-1/4 x 5 etichetta";
+"media.oe_3.25x5.5-label_3.25x5.5in" = "3-1/4 x 5-1/2 etichetta";
+"media.oe_3.25x5.83-label_3.25x5.83in" = "3-1/4 x 5-13/16 Etichetta";
+"media.oe_3.25x7.83-label_3.25x7.83in" = "3-1/4 x 7-13/16 Etichetta";
+"media.oe_3.5x1-label_3.5x1in" = "3-1/2 x 1 etichetta";
+"media.oe_30859-paint-can-label_2.25x3.125in" = "2-1/4 x 3-1/8 di vernice";
+"media.oe_3x1-label_3x1in" = "3 x 1 etichetta";
+"media.oe_3x1.25-label_3x1.25in" = "3 x 1-1/4 Etichetta";
+"media.oe_3x2-label_3x2in" = "3 x 2 etichetta";
+"media.oe_3x3-label_3x3in" = "3 x 3 etichette";
+"media.oe_3x5-label_3x5in" = "3 x 5 etichetta";
+"media.oe_4x1-label_4x1in" = "4 x 1 etichetta";
+"media.oe_4x13-label_4x13in" = "4 x 13 etichetta";
+"media.oe_4x2-label_4x2in" = "4 x 2 etichetta";
+"media.oe_4x3-label_4x3in" = "4 x 3 etichette";
+"media.oe_4x4-label_4x4in" = "4 x 4 etichetta";
+"media.oe_4x5-label_4x5in" = "4 x 5 etichetta";
+"media.oe_4x6-label_4x6in" = "4 x 6 etichetta";
+"media.oe_4x6.5-label_4x6.5in" = "4 x 6-1 / 2";
+"media.oe_4x8-label_4x8in" = "4 x 8 etichetta";
+"media.oe_6x1-label_6x1in" = "6 x 1 etichetta";
+"media.oe_6x13-label_6x13in" = "6 x 13 etichetta";
+"media.oe_6x2-label_6x2in" = "6 x 2 etichetta";
+"media.oe_6x3-label_6x3in" = "6 x 3 etichetta";
+"media.oe_6x4-label_6x4in" = "6 x 4 etichetta";
+"media.oe_6x5-label_6x5in" = "6 x 5 etichetta";
+"media.oe_6x6-label_6x6in" = "6 x 6 etichetta";
+"media.oe_6x6.5-label_6x6.5in" = "6 x 6-1 / 2";
+"media.oe_8x1-label_8x1in" = "8 x 1 etichetta";
+"media.oe_8x13-label_8x13in" = "8 x 13 Etichetta";
+"media.oe_8x2-label_8x2in" = "8 x 2 etichetta";
+"media.oe_8x3-label_8x3in" = "8 x 3 etichette";
+"media.oe_8x4-label_8x4in" = "8 x 4 etichetta";
+"media.oe_8x5-label_8x5in" = "8 x 5 etichetta";
+"media.oe_8x6-label_8x6in" = "8 x 6 etichetta";
+"media.oe_8x6.5-label_8x6.5in" = "8 x 6-1 / 2";
+"media.oe_address-label_1.125x3.5in" = "1-1/8 x 3-1/2 Etichetta di indirizzo";
+"media.oe_barcode-label_0.75x2.5in" = "3/4 x 2-1/2 Etichetta di codici a barre";
+"media.oe_book-spine-label_1x1.5in" = "1 x 1-1/2 Libro Spina Etichetta";
+"media.oe_continuous-label_2.125x3600in" = "Etichetta continua 2-1/8";
+"media.oe_dk1201-address_1.1x3.5in" = "DK1201 28 x 89mm Indirizzo etichetta";
+"media.oe_dk1202-shipping_2.4x3.9in" = "DK1202 61 x 99mm Etichetta di spedizione";
+"media.oe_dk1203-file-folder_0.66x3.4in" = "DK1203 17 x 86mm Etichetta della cartella di file";
+"media.oe_dk1204-multi-purpose_0.66x2.1in" = "DK1204 17 x 53mm Multiuso Etichetta";
+"media.oe_dk1207-cd-dvd_2.2x2.2in" = "DK1207 56mm CD/DVD Etichetta";
+"media.oe_dk1208-large-address_1.4x3.5in" = "DK1208 36 x 89mm Grande etichetta di indirizzo";
+"media.oe_dk1209-small-address_1.1x2.4in" = "DK1209 28 x 61mm Piccolo indirizzo etichetta";
+"media.oe_dk1219-round_0.47x0.47in" = "Etichetta rotonda DK1219 12mm";
+"media.oe_dk1240-large-multi-purpose_1.9x4in" = "DK1240 48 x 102mm Grande etichetta multiuso";
+"media.oe_file-folder-label_0.5625x3.4375in" = "9/16 x 3-7 Etichetta cartella file";
+"media.oe_hanging-file-tab-insert_0.5625x2in" = "9/16 x 2 Etichetta di inserimento della scheda di file appeso";
+"media.oe_internet-postage-confirmation-label_2.3125x10.5in" = "2-5/16 x 10-1/2 Etichetta di conferma della posta";
+"media.oe_internet-postage-label_1.25x1.625in" = "Etichetta di posta elettronica 1-1/4 x 1-5/8";
+"media.oe_internet-postage-label_2.3125x7in" = "2-3/8 x 7 Etichetta di posta elettronica";
+"media.oe_lg-address-label_1.4x3.5in" = "1-4/10 x 3-1 Grande etichetta di indirizzo";
+"media.oe_lg-multipurpose-label_2.125x.75in" = "2-1/8 x 3/4 Grande etichetta multiuso";
+"media.oe_library-barcode-label_0.5x1.875in" = "1/2 x 1-7/8 Biblioteca codice a barre etichetta";
+"media.oe_md-appointment-card_2x3.5in" = "2 x 3-1/2 Carta media di nomina";
+"media.oe_md-multipurpose-label_2.25x1.25in" = "2-1/4 x 1/1/4 Etichetta multiuso media";
+"media.oe_media-label_2.25x2.25in" = "2-1/4 x 2-1/4 Media Etichetta";
+"media.oe_medium-1in-tape_0.5x1in" = "1/2 x 1 Nastro";
+"media.oe_medium-2in-tape_0.5x2in" = "1/2 x 2 Nastro";
+"media.oe_medium-3in-tape_0.5x3in" = "1/2 x 3 Nastro";
+"media.oe_multipurpose-label_2x2.3125in" = "2 x 2-5 Etichetta multiuso";
+"media.oe_name-badge-label_2.25x4in" = "2-1/4 x 4 nome Badge Label";
+"media.oe_price-tag-label_0.9375x0.875in" = "15/16 x 7/8 Prezzo Tag etichetta";
+"media.oe_return-address-label_0.75x2in" = "3/4 x 2 Etichetta di indirizzo di ritorno";
+"media.oe_shipping-label_2.125x4in" = "2-1/8 x 4 Etichetta di spedizione";
+"media.oe_shipping-label_2.3125x4in" = "2-5/16 x 4 Etichetta di spedizione";
+"media.oe_sm-multipurpose-label_1x2.125in" = "1 x 2-1/8 Piccola etichetta multiuso";
+"media.oe_square-multipurpose-label_1x1in" = "1 etichetta multiuso quadrato";
+"media.oe_thin-1in-tape_0.25x1in" = "1/4 x 1 Nastro";
+"media.oe_thin-2in-tape_0.25x2in" = "1/4 x 2 Nastro";
+"media.oe_thin-3in-tape_0.25x3in" = "1/4 x 3 Nastro";
+"media.oe_thin-multipurpose-label_0.375x2.8125in" = "3/8 x 2-13/16 Etichetta multiuso sottile";
+"media.oe_thinner-1in-tape_0.375x1in" = "3/8 x 1 Nastro";
+"media.oe_thinner-2in-tape_0.375x2in" = "3/8 x 2 Nastro";
+"media.oe_thinner-3in-tape_0.375x3in" = "3/8 x 3 Nastro";
+"media.oe_video-spine-label_0.75x5.875in" = "3/4 x 5-7/8 Etichetta di filatura video";
+"media.oe_video-top-label_1.8x3.1in" = "1,8 x 3.1 Video Top Label";
+"media.oe_wide-1in-tape_1x1in" = "1 x 1 Nastro";
+"media.oe_wide-2in-tape_1x2in" = "1 x 2 Nastro";
+"media.oe_wide-3in-tape_1x3in" = "1 x 3 Nastro";
+"media.oe_wider-1in-tape_0.75x1in" = "3/4 x 1 Nastro";
+"media.oe_wider-2in-tape_0.75x2in" = "3/4 x 2 Nastro";
+"media.oe_wider-3in-tape_0.75x3in" = "3/4 x 3 Nastro";
+"media.om_35mm-slide_9x37mm" = "Etichetta di scorrimento 35mm";
+"media.om_4-part-label_48x96mm" = "48 x 96mm Etichetta a 4 pezzi";
+"media.om_8mm-spine_9x66mm" = "Etichetta di filatura 8mm";
+"media.om_address-large_35x83mm" = "35 x 83 millimetri Etichetta di indirizzo grande";
+"media.om_address-small_24x83mm" = "24 x 83mm piccolo indirizzo etichetta";
+"media.om_cut-hanging-13_32x78mm" = "32 x 78mm 1/3 Etichetta della cartella di file sospesa di taglio";
+"media.om_cut-hanging-15_32x40mm" = "32 x 40mm 1/5 sospensione di taglio Etichetta cartella file";
+"media.om_diskette_48x64mm" = "48 x 64 millimetri etichetta di Diskette";
+"media.om_euro-file-folder_39x49mm" = "39 x 49mm Euro File Folder Etichetta";
+"media.om_euro-folder-narrow_38x186mm" = "38 x 186mm Etichetta pieghevole Euro Narrow File";
+"media.om_euro-folder-wide_48x186mm" = "48 x 186mm Etichetta pieghevole Euro Wide File";
+"media.om_euro-name-badge-large_48x79mm" = "48 x 79 mm Euro Grande Nome etichetta Badge";
+"media.om_euro-name-badge_38x67mm" = "38 x 67 mm Euro Nome etichetta Badge";
+"media.om_file-folder_13x81mm" = "13 x 81mm Etichetta cartella file";
+"media.om_jewelry_27x48mm" = "Etichetta di gioielli da 27 x 48 mm";
+"media.om_media-badge_48x64mm" = "48 x 64 mm Media Badge Label";
+"media.om_multi-purpose_24x44mm" = "24 x 44 millimetri multiuso Etichetta";
+"media.om_retail-label_32x37mm" = "32 x 37 mm Etichetta di vendita al dettaglio";
+"media.om_return_16x43mm" = "16 x 43 mm Etichetta di ritorno";
+"media.om_round_22x24mm" = "Etichetta rotonda 22mm";
+"media.om_shipping_48x96mm" = "48 x 96mm Etichetta di spedizione";
+"media.om_top-coated-paper_48x140mm" = "48 x 140mm Carta rivestita superiore";
+"media.om_vhs-face_45x72mm" = "45 x 72 millimetri VHS Face Label";
+"media.om_vhs-spine_18x141mm" = "18 x 141mm VHS Spina Etichetta";
+"media.om_zip-disk_48x55mm" = "48 x 55mm Zip Disk Etichetta";
