--- a/static-resources/lprint-de.strings
+++ b/static-resources/lprint-de.strings
@@ -50,6 +50,7 @@
 "media.oe_4x5-label_4x5in" = "4 x 5 Label";
 "media.oe_4x6-label_4x6in" = "4 x 6 Label";
 "media.oe_4x6.5-label_4x6.5in" = "4 x 6-1/2 Label";
+"media.oe_4x7.83-label_4x7.83in" = "4 x 7-13/16 Label";
 "media.oe_4x8-label_4x8in" = "4 x 8 Label";
 "media.oe_6x1-label_6x1in" = "6 x 1 Label";
 "media.oe_6x13-label_6x13in" = "6 x 13 Label";
