--- a/static-resources/lprint-it.strings
+++ b/static-resources/lprint-it.strings
@@ -49,7 +49,8 @@
 "media.oe_4x4-label_4x4in" = "4 x 4 etichetta";
 "media.oe_4x5-label_4x5in" = "4 x 5 etichetta";
 "media.oe_4x6-label_4x6in" = "4 x 6 etichetta";
-"media.oe_4x6.5-label_4x6.5in" = "4 x 6-1 / 2";
+"media.oe_4x6.5-label_4x6.5in" = "4 x 6-1/2 etichetta";
+"media.oe_4x7.83-label_4x7.83in" = "4 x 7-13/16 etichetta";
 "media.oe_4x8-label_4x8in" = "4 x 8 etichetta";
 "media.oe_6x1-label_6x1in" = "6 x 1 etichetta";
 "media.oe_6x13-label_6x13in" = "6 x 13 etichetta";
