Populated all strings, removed spurious file

--- a/static-resources/lprint-fr.strings
+++ b/static-resources/lprint-fr.strings
@@ -125,6 +125,7 @@
 "media.om_cut-hanging-13_32x78mm" = "32 x 78mm 1/3 Cut Hanging File Folder Label";
 "media.om_cut-hanging-15_32x40mm" = "32 x 40mm 1/5 Couper Hanging File Folder Label";
 "media.om_diskette_48x64mm" = "étiquette de disquette 48 x 64 mm";
+"media.om_diskette_54x70mm" = "étiquette de disquette 54 x 70 mm";
 "media.om_euro-file-folder_39x49mm" = "39 x 49mm Euro File Folder Label";
 "media.om_euro-folder-narrow_38x186mm" = "38 x 186mm Euro Narrow File Folder Label";
 "media.om_euro-folder-wide_48x186mm" = "48 x 186mm Euro Wide File Folder Label";
