--- a/static-resources/lprint-es.strings
+++ b/static-resources/lprint-es.strings
@@ -124,6 +124,7 @@
 "media.om_cut-hanging-13_32x78mm" = "32 x 78mm 1/3 Cut Hanging Etiqueta de carpeta de archivos";
 "media.om_cut-hanging-15_32x40mm" = "32 x 40mm 1/5 Cut Hanging Etiqueta de carpeta de archivos";
 "media.om_diskette_48x64mm" = "48 x 64mm Etiqueta de disquete";
+"media.om_diskette_54x70mm" = "54 x 70mm Etiqueta de disquete";
 "media.om_euro-file-folder_39x49mm" = "39 x 49mm Etiqueta de carpeta de archivos";
 "media.om_euro-folder-narrow_38x186mm" = "38 x 186mm Etiqueta de carpeta de archivos";
 "media.om_euro-folder-wide_48x186mm" = "48 x 186mm Etiqueta de carpeta de archivos";
