--- a/static-resources/lprint-it.strings
+++ b/static-resources/lprint-it.strings
@@ -125,6 +125,7 @@
 "media.om_cut-hanging-13_32x78mm" = "32 x 78mm 1/3 Etichetta della cartella di file sospesa di taglio";
 "media.om_cut-hanging-15_32x40mm" = "32 x 40mm 1/5 sospensione di taglio Etichetta cartella file";
 "media.om_diskette_48x64mm" = "48 x 64 millimetri etichetta di Diskette";
+"media.om_diskette_54x70mm" = "54 x 70 millimetri etichetta di Diskette";
 "media.om_euro-file-folder_39x49mm" = "39 x 49mm Euro File Folder Etichetta";
 "media.om_euro-folder-narrow_38x186mm" = "38 x 186mm Etichetta pieghevole Euro Narrow File";
 "media.om_euro-folder-wide_48x186mm" = "48 x 186mm Etichetta pieghevole Euro Wide File";
